<resources>
    <string name="app_name">Sine</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key">611dca8cf117ec0c95b0da6ed0fbe87a</string>
    <string name="next">Next</string>
    <string name="watch_trailer">Watch trailer</string>
    <string name="more">more...</string>
    <string name="welcome">Welcome</string>
    <string name="skip" />
    <string name="Login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="repeat_password">repeat password</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="trailerIsNotAvailable">Sorry, trailer video is not available</string>
    <string name="Any">Any</string>
    <string name="MovieGenre">Movie genre</string>
    <string name="pleaseEnterValidEmailAdress">Please enter valid email addres</string>
    <string name="pleaseVerifyEmailSent">Please verify email sent</string>
    <string name="failedToLogIn">Failed to log in</string>
    <string name="verificationEmailSent">Verification email sent</string>
    <string name="passwordsAreNotSame">Passwords are not the same</string>
    <string name="userCreatedSuccessfully">User created succesfully</string>
    <string name="emailAlreadyExists">Email already exists</string>
    <string name="passwordIsToWeak">Password is to weak</string>
    <string name="forgot_password">forgot password?</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="email_address">Email address</string>
    <string name="sendEmail">Send email</string>
    <string name="emailSent">Email sent</string>
    <string name="failedToSendAnEmail">Failed to send an email</string>
    <string name="failedToSignUp">Failed to sign up</string>
    <string name="character">Character</string>
    <string name="space">" "</string>
    <string name="shuffle">Shuffle</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="youLoggedOut">You logged out</string>
    <string name="readMore">read more...</string>
    <string name="overview">Overview</string>
    <string name="failedAddingToFavorites">Failed adding to favorites</string>
    <string name="addedToFavorites">Movie added to favorites</string>
    <string name="failedToLoadMovies">Failed to load favorite movies</string>
    <string name="failedToLoadFavoriteMovies">Failed to load favorite movies</string>
    <string name="topRated">Top rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="mostPopular">Most popular</string>
    <string name="popular">Popular</string>
    <string name="Home">Home</string>
    <string name="playTrailer">Play trailer</string>
    <string name="results">Results</string>
    <string name="latest">Latest</string>
    <string name="movieName">movie name</string>
    <string name="nowPlaying">Now playing</string>
    <string name="search">search</string>
    <string name="searchMovies">search movies</string>
    <string name="favorites">favorites</string>
    <string name="settings">settings</string>
    <string name="menu">menu</string>
    <string name="morePlus">more +</string>
    <string name="favoriteMovies">Favorite movies</string>
    <string name="adult">18+</string>
    <string name="movieRemovedFromFavorites">Movie removed from favorites</string>
    <string name="failedToRemoveMovie">Failed to remove movie</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="youMustBeLoggedIn">You must be logged in</string>
    <string name="noMoviesHere">No movies here</string>
    <string name="thereIsNoMoviesHere">There is no movies here</string>
    <string name="doYouWantToLogOut">Do you want to logout?</string>
    <string name="no">No</string>
</resources>