<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background_round_corners"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <TextView
        android:id="@+id/forgotpassword_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/forgotpassword"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/username_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        android:paddingTop="20dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/send_email_password_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:backgroundTint="@color/yellow_rating"
        android:text="@string/sendEmail"
        android:textColor="@color/black"
        android:fontFamily="@font/glacial_indifference_regular"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/username_input"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/close_dialog_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_baseline_close_24"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>
